fixed overflow issue with grid-template-column

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-gap: 0.625rem;
-  grid-template-columns: 40px repeat(7 1fr);
+  grid-template-columns: repeat(7, 150px);
   grid-template-rows: 70px 600px 1fr;
   grid-template-areas: 
   "hd hd hd hd hd hd hd hd"
